[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquity"
version = "1.2.0"
description = "Python toolkit for building and analyzing multimodal street and transit networks with a focus on accessibility and distributive equity"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="pannawatr"}]
classifiers = ["Programming Language :: Python :: 3.9"]
dependencies = ["osmnx>=2.0.0", "geopandas>=1.0.0", "shapely>=2.0.0", "networkx>=3.2", "numpy>=1.23", "pandas>=2.0", "scipy>=1.10", "matplotlib>=3.7", "pyproj>=3.5"]

[project.urls]
Repository = "https://github.com/pannawatr/pyquity"